fix scrollspy last toc-entry active when page is all visible
also upgrade bootstrap.js

--- a/_includes/css/sotm2019.css
+++ b/_includes/css/sotm2019.css
@@ -1,6 +1,7 @@
 body {
     width: 100%;
-    height: 100%;
+    height: auto;
+    /*height: 100%;*/
     font-family: 'Barlow',"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 17px;
     color: {{ site.color.text }};
